#3180
Allow to set avatar for Profile Photos album only if photos are used
are for avatars.